[gd_scene load_steps=2 format=3 uid="uid://c40dooghhe5sx"]

[ext_resource type="Script" uid="uid://dekef5jlu5s1f" path="res://Scenes/UI/MenuButton_PopUp.gd" id="1_g0ps2"]

[node name="Panel" type="PopupPanel"]
size = Vector2i(100, 144)
visible = true
script = ExtResource("1_g0ps2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 140.0

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="ResetButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Reset"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ResetButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
